--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
             <div class="container py-5 px-lg-5">
                 <div class="text-center pb-4 wow fadeInUp" data-wow-delay="0.1s">
                     <h5 class="text-primary-gradient fw-medium">Como funciona</h5>
-                    <h1 class="mb-5">3 passo simples</h1>
+                    <h1 class="mb-5">3 passos simples</h1>
                 </div>
                 <div class="row gy-5 gx-4 justify-content-center">
                     <div class="col-lg-4 col-sm-6 text-center pt-4 wow fadeInUp" data-wow-delay="0.1s">
