--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
                         <a href="#about" class="nav-item nav-link">Sobre</a>
                         <a href="#feature" class="nav-item nav-link">Como funciona</a>
                         <a href="#chamarAgora" class="nav-item nav-link">Chamar agora</a>
-                        <a href="#contact" class="nav-item nav-link">Contato</a>
+                        <a href="https://app.tomexpress.com.br" class="btn btn-primary-gradient rounded-pill py-2 px-4 ms-3 mb-2 nav-item nav-link d-lg-none">Acessar</a>
+                        <a href="https://app.tomexpress.com.br/cadastro/empresa/31dba361-9747-41c4-bc06-49d86aec5354" class="btn btn-primary-gradient rounded-pill py-2 px-4 ms-3 nav-item nav-link d-lg-none">Quero me cadastrar</a>
                     </div>
                     <a href="https://app.tomexpress.com.br" class="btn btn-primary-gradient rounded-pill py-2 px-4 ms-3 d-none d-lg-block">Acessar</a>
                     <a href="https://app.tomexpress.com.br/cadastro/empresa/31dba361-9747-41c4-bc06-49d86aec5354" class="btn btn-primary-gradient rounded-pill py-2 px-4 ms-3 d-none d-lg-block">Quero me cadastrar</a>
